--- a/training/week05/Twittos/app/build.gradle
+++ b/training/week05/Twittos/app/build.gradle
@@ -45,5 +45,13 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.1.0'
     implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
     implementation 'com.google.firebase:firebase-auth:16.0.5'
+    implementation 'com.google.firebase:firebase-storage:16.0.4'
+
+    //Glide
+    implementation "com.github.bumptech.glide:glide:4.10.0"
+    annotationProcessor "com.github.bumptech.glide:compiler:4.10.0"
+
+    //Zoomy
+    implementation 'com.ablanco.zoomy:zoomy:1.1.0'
 
 }
